[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Actors/Spawning/Spawners/AsteroidSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Actors/Spawning/Spawners/RusherSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Actors/Spawning/HostilesManager.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/Spawning/Spawners/ShooterSpawner.tscn" type="PackedScene" id=4]

[node name="HostilesManager" type="Node2D"]
script = ExtResource( 3 )

[node name="AsteroidSpawner" parent="." instance=ExtResource( 1 )]

[node name="RusherSpawner" parent="." instance=ExtResource( 2 )]

[node name="ShooterSpawner" parent="." instance=ExtResource( 4 )]
